# siglent

./: .flake8  .gitignore  LICENSE  README.md  common.html  power_supplies.html  pyproject.toml  spectrum_analyzers.html
.github/workflows/: CI.yml  ci.yml
siglent/: common.py  index.html  power_supplies.py  spectrum_analyzers.py
