[tool.poetry]
name = "siglent"
version = "0.1.0"
description = "Automation of Siglent test equipemnt via VISA"
authors = ["Kiran Shila <me@kiranshila.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyVISA = "^1.12.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
