[tool.poetry]
name = "siglent"
version = "0.1.0"
description = "Automation of Siglent test equipemnt via VISA"
authors = ["Kiran Shila <me@kiranshila.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyVISA = "^1.12.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
flake8-typing-imports = "^1.13.0"
flake8-docstrings = "^1.6.0"
pytest-flake8 = "^1.1.1"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
